--- a/NumPy/01. numpy basic.md
+++ b/NumPy/01. numpy basic.md
@@ -340,7 +340,28 @@ print(arr1)
 #  96 97 98 99]
 ```
 
+* 이외에 resize에 대해서 알아보자
 
+``` python
+import numpy as np
+
+# 정수형태의 난수를 이용해서 (3,4) shape을 가지는 ndarray를 생성
+np.random.seed(10)
+
+arr = np.random.randint(0,10,(3,4))
+print(arr)
+
+result = arr.resize(2,6)
+# print(result)          # None => View가 생성되지 않음. 원본이 원하는 shape으로 바뀜
+# print(arr)
+
+arr.resize(3,5)         # reshape()은 요소의 개수가 맞지 않으면 안됨
+                   # resize()는 요소의 개수가 맞지 않아도 shape이 변경된다. (0으로 채움)
+print(arr)
+
+arr.resize(2,2)        # 요소수가 줄어들면 기존 데이터를 버리고 늘어나면 0으로 세팅
+print(arr)
+```
 
 
 
