--- a/NumPy/02. numpy basic2.md
+++ b/NumPy/02. numpy basic2.md
@@ -81,7 +81,7 @@ print(arr[np.ix_([0,2],[1,3])])
 
 ```python
 # + - * /
-rr1 = np.array([[1,2,3],[4,5,6]])   # 2 X 3 ndarray
+arr1 = np.array([[1,2,3],[4,5,6]])   # 2 X 3 ndarray
 arr2 = np.array([[7,8,9],[10,11,12]]) # 2 X 3 ndarray
 
 # python의 list에서 + 연산자는 concatenation
